--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 dj-static==0.0.6
 Django==1.11
 django-bootstrap4==0.0.7
+django-heroku==0.3.1
 gunicorn==19.9.0
 Pillow==5.2.0
 psycopg2==2.7.5
